--- a/app/public/index.html
+++ b/app/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Candy Drop</title>
+    <title> Vaporwave 🤖 Drop</title>
     <meta name="title" content="Candy Drop" />
     <meta name="description" content="Mint a limited NFT drop on Solana." />
     
